<resources>
    <string name="app_name">ClearTab</string>
    <string name="title_history">Histórico</string>
    <string name="title_home">Home</string>
    <string name="title_tasks">Tasks</string>
    <string name="slider1">Crie a sua equipa</string>
    <string name="slider2">Organize e atribua cargos á sua equipa</string>
    <string name="slider3">Veja o histórico das tarefas realizados</string>
    <string name="slider4">Tenha estatíticas dos utilizadores</string>
    <string name="login">Insira os seus dados:</string>
    <string name="login_username">Nome do utilizador:</string>
    <string name="login_password">Palavra-passe:</string>
    <string name="login_login">Iniciar sessão</string>
    <string name="login_nao_conta">Ainda não tem conta?</string>
    <string name="criar_conta_email">Email:</string>
    <string name="criar_conta_conta">Criar conta</string>
    <string name="criar_projeto_nome">Nome do projeto:</string>
    <string name="criar_conta_descricao">Descrição:</string>
    <string name="criar_conta_membros">Membros:</string>
    <string name="criar_projeto_confirmar">Confirmar</string>
    <string name="criar_conta_nome">Nome:</string>
    <string name="projeto_editar">Editar</string>
    <string name="projeto_baixar">Baixar</string>
    <string name="perfil_cargo">Cargo:</string>
    <string name="atualizar_perfil_confirmar">Confirmar</string>
    <string name="atualizar_perfil_eleminar">Eliminar</string>
    <string name="perfil_pessoal_sair">Sair</string>
    <string name="tarefa_em_andamento_titulo">Titulo:</string>
    <string name="projetos_adicionar">Adicionar</string>
    <string name="slider3_passar">Passar para a pagina 4</string>
    <string name="slider1_passar">Passar para a pagina 2</string>
    <string name="slider2_passar">Passar para a pagina 3</string>
    <string name="tarefa_em_andamento_tempo">Até:</string>
    <string name="tarefa_em_andamento_data">Data:</string>
    <string name="tarefa_finalizada">Concluido:</string>
    <string name="criar_tarefa_atribua_utilizadores">Atribua utilizadores:</string>
    <string name="avaliacao_desempenho">Desempenho:</string>
    <string name="avaliacao_comunicacao">Comunicação:</string>
    <string name="avaliacao_trabalho">Trabalho:</string>
    <string name="avaliacao_critica">Crítica(opcional):</string>
    <string name="lista_tarefas_n_tarefas">Mais nenhuma tarefa a realizar</string>
    <string name="visualizar_tarefa_utilizador_tarefa_concluida">Concluíu a tarefa?</string>
    <string name="auto_avaliacao_dificuldade">Dificuldade:</string>
    <string name="auto_avaliacao_tempo_investido">Tempo investido:</string>
    <string name="auto_avaliacao_horas">Horas...</string>
    <string name="login_cria_uma">Cria uma!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="criar_conta_entre">Entre!</string>
    <string name="criar_conta_descricao_text">Descrição</string>
    <string name="criar_conta_para_login">Já tem conta?</string>
    <string name="tasks_criar_tarefa">Criar Tarefa</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>