<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="322dp"
        android:layout_height="69dp"
        android:layout_marginTop="180dp"
        android:text="@string/criar_conta_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.494"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView13"
        android:layout_width="190dp"
        android:layout_height="42dp"
        android:layout_marginStart="44dp"
        android:layout_marginTop="124dp"
        android:layout_marginEnd="177dp"
        android:text="@string/tarefa_em_andamento_titulo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button7"
        android:layout_width="176dp"
        android:layout_height="48dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/rounded_corners"
        android:text="@string/projeto_editar"
        app:icon="@drawable/outline_create_24"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView12" />

    <TextView
        android:id="@+id/textView14"
        android:layout_width="91dp"
        android:layout_height="28dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="272dp"
        android:text="@string/tarefa_em_andamento_tempo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.555"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <EditText
        android:id="@+id/editTextDate"
        android:layout_width="241dp"
        android:layout_height="48dp"
        android:layout_marginStart="6dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="24dp"
        android:ems="10"
        android:inputType="date"
        android:text="@string/tarefa_em_andamento_data"
        android:hint="@string/tarefa_em_andamento_data"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/textView14"
        app:layout_constraintTop_toBottomOf="@+id/button7" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="113dp"
        android:layout_height="48dp"
        android:layout_marginStart="34dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="264dp"
        android:text="@string/criar_conta_membros"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView14" />

    <androidx.recyclerview.widget.RecyclerView
        android:layout_width="345dp"
        android:layout_height="182dp"
        android:layout_marginStart="34dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="68dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />
</androidx.constraintlayout.widget.ConstraintLayout>