<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/auto_avaliacao">

    <TextView
        android:id="@+id/textView21"
        android:layout_width="146dp"
        android:layout_height="55dp"
        android:layout_marginStart="38dp"
        android:layout_marginTop="120dp"
        android:layout_marginEnd="227dp"
        android:text="@string/tarefa_em_andamento_titulo"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView28"
        android:layout_width="186dp"
        android:layout_height="38dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="18dp"
        android:layout_marginEnd="188dp"
        android:text="@string/auto_avaliacao_tempo_investido"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <EditText
        android:id="@+id/aa_horas"
        android:layout_width="230dp"
        android:layout_height="48dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="163dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/auto_avaliacao_horas"
        android:hint="@string/auto_avaliacao_horas"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView28" />

    <TextView
        android:id="@+id/textView23"
        android:layout_width="145dp"
        android:layout_height="45dp"
        android:layout_marginStart="40dp"
        android:layout_marginTop="116dp"
        android:layout_marginEnd="226dp"
        android:text="@string/auto_avaliacao_dificuldade"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView21" />

    <RatingBar
        android:id="@+id/aa_dificuldade"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="40dp"
        android:layout_marginTop="14dp"
        android:layout_marginEnd="291dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView23" />

    <TextView
        android:id="@+id/textView24"
        android:layout_width="143dp"
        android:layout_height="41dp"
        android:layout_marginStart="42dp"
        android:layout_marginTop="24dp"
        android:layout_marginEnd="226dp"
        android:text="@string/criar_conta_membros"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aa_dificuldade" />

    <RatingBar
        android:id="@+id/aa_membros"
        style="?android:attr/ratingBarStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="42dp"
        android:layout_marginTop="13dp"
        android:layout_marginEnd="289dp"
        android:isIndicator="true"
        android:numStars="5"
        android:stepSize="0.1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView24" />

    <TextView
        android:id="@+id/textView25"
        android:layout_width="161dp"
        android:layout_height="40dp"
        android:layout_marginStart="39dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="226dp"
        android:text="@string/criar_conta_descricao"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.133"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/aa_membros" />

    <EditText
        android:id="@+id/aa_descricao"
        android:layout_width="346dp"
        android:layout_height="83dp"
        android:layout_marginStart="37dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="28dp"
        android:ems="10"
        android:inputType="text"
        android:text="@string/criar_conta_descricao"
        android:textColor="#000000"
        android:textSize="20sp"
        android:hint="@string/criar_conta_descricao"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView25" />

    <!-- TODO adicionar botao de confirmar com id aa_confirmar -->

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/navigation_view"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:itemIconTint="@color/black"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

    <Button
        android:id="@+id/button4"
        android:layout_width="129dp"
        android:layout_height="52dp"
        android:layout_marginStart="130dp"
        android:layout_marginEnd="152dp"
        android:layout_marginBottom="10dp"
        android:text="@string/tarefa_finalizada"
        app:layout_constraintBottom_toTopOf="@+id/navigation_view"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>